--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 <body>
 
-  <!-- Write your HTML in this file -->
+  <ul>
+    <li>4 slices of bread</li>
+    <li>DF</li>
+    <li>1 tbsp of butter</li>
+  </ul>
 
 </body>
 </html>
