--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <li>4 slices of cheese</li>
       <ul>
         <li>cheddar</li>
-        <li>mozerr</li>
+        <li>mozzarella</li>
+        <li>pepper jack</li>
       </ul>
     <li>1 tbsp of butter</li>
   </ul>
